# pianificatore-percorso

./: CMakeLists.txt  README.md  consegna.c
specifica/strumenti-svilupppo/esempi/: collezione_bug.c  simple.c
tester-automatizzato/: README.md  tester-automatizzato.sh
